--- a/composite_project-1/Composite_Project-1_fin.ipynb
+++ b/composite_project-1/Composite_Project-1_fin.ipynb
@@ -308,7 +308,8 @@
       "Most likely delimiter in the file: ','\n",
       "The first line of the file:\n",
       "Name,Platform,Year_of_Release,Genre,NA_sales,EU_sales,JP_sales,Other_sales,Critic_Score,User_Score,Rating\n",
-      "CSV Data loaded into pandas DataFrame from 'local'\n"
+      "CSV Data loaded into pandas DataFrame from 'local'\n",
+      "The total size of the DataFrame in kilobytes: 5115.25 KB\n"
      ]
     }
    ],
@@ -318,15 +319,15 @@
     "                 'practicum': '/datasets/games.csv', \\\n",
     "                 'ya': 'https://code.s3.yandex.net/datasets/games.csv'}\n",
     "\n",
-    "# Check if file exists in local file system\n",
+    "# Check if file exists in local file system (isfile() from os.path)\n",
     "if isfile(filename_dict.get('local')):\n",
     "    print('File exists locally')\n",
     "    loc = 'local'\n",
-    "# Check if file exists on Practicum platform\n",
+    "# Check if file exists on Practicum platform (isfile() from os.path)\n",
     "elif isfile(filename_dict.get('practicum')):\n",
     "    print('File exists on Practicum')\n",
     "    loc = 'practicum'\n",
-    "# Check if file exists on Yandex server\n",
+    "# Check if file exists on Yandex server (head() from requests)\n",
     "elif head(filename_dict.get('ya')).status_code == 200:\n",
     "    print('File exists on Yandex server')\n",
     "    loc = 'ya'\n",
@@ -341,7 +342,7 @@
     "# Determine delimiter used in CSV file\n",
     "if loc != 'ya':\n",
     "    try:\n",
-    "        # Open file and read first 1024 bytes to determine delimiter\n",
+    "        # Open file and read first 1024 bytes to determine delimiter (sniff() from csv Sniffer())\n",
     "        with open(filename, 'r', encoding='utf-8') as csvfile:\n",
     "            dialect = sniff(csvfile.read(1024))\n",
     "            print(f'Most likely delimiter in the file: \\'{dialect.delimiter}\\'')\n",
@@ -349,9 +350,9 @@
     "        raise RuntimeError('Something went wrong while opening the local|practicum file for delimiter analysis')\n",
     "else:\n",
     "    try:\n",
-    "        # Open URL and read first 1024 bytes to determine delimiter\n",
+    "        # Open URL and read first 1024 bytes to determine delimiter (urlopen() from urllib.request)\n",
     "        response = urlopen(filename)\n",
-    "        # Creating file-like object\n",
+    "        # Creating file-like object (StringIO() from io)\n",
     "        csvfile = StringIO()\n",
     "        # Writing the content of the variable csvfile to the object\n",
     "        csvfile.write(response.read().decode('utf-8'))\n",
@@ -402,7 +403,15 @@
     "del filename_dict\n",
     "del dialect\n",
     "del filename\n",
-    "del loc"
+    "del loc\n",
+    "\n",
+    "# The total size of the DataFrame in bytes\n",
+    "# Sizes in bytes for each column summed\n",
+    "# Total size in kbytes\n",
+    "total_memory_usage_kb = (games.memory_usage(deep=True).sum() +\\\n",
+    "                         games.index.memory_usage() + \\\n",
+    "                         games.columns.memory_usage()) / 1024\n",
+    "print(f'The total size of the DataFrame in kilobytes: {total_memory_usage_kb:.2f} KB')"
    ]
   },
   {
@@ -972,143 +981,143 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "#T_b6843_row0_col0,#T_b6843_row1_col1,#T_b6843_row2_col2,#T_b6843_row3_col3,#T_b6843_row4_col4,#T_b6843_row5_col5{\n",
+       "#T_68766_row0_col0,#T_68766_row1_col1,#T_68766_row2_col2,#T_68766_row3_col3,#T_68766_row4_col4,#T_68766_row5_col5{\n",
        "            background-color:  #08306b;\n",
        "            color:  #f1f1f1;\n",
-       "        }#T_b6843_row0_col1,#T_b6843_row0_col2,#T_b6843_row0_col3,#T_b6843_row0_col4,#T_b6843_row0_col5,#T_b6843_row3_col0{\n",
+       "        }#T_68766_row0_col1,#T_68766_row0_col2,#T_68766_row0_col3,#T_68766_row0_col4,#T_68766_row0_col5,#T_68766_row3_col0{\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row1_col0{\n",
+       "        }#T_68766_row1_col0{\n",
        "            background-color:  #eaf3fb;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row1_col2{\n",
+       "        }#T_68766_row1_col2{\n",
        "            background-color:  #1e6db2;\n",
        "            color:  #f1f1f1;\n",
-       "        }#T_b6843_row1_col3{\n",
+       "        }#T_68766_row1_col3{\n",
        "            background-color:  #61a7d2;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row1_col4{\n",
+       "        }#T_68766_row1_col4{\n",
        "            background-color:  #4292c6;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row1_col5{\n",
+       "        }#T_68766_row1_col5{\n",
        "            background-color:  #caddf0;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row2_col0{\n",
+       "        }#T_68766_row2_col0{\n",
        "            background-color:  #dae8f6;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row2_col1{\n",
+       "        }#T_68766_row2_col1{\n",
        "            background-color:  #1967ad;\n",
        "            color:  #f1f1f1;\n",
-       "        }#T_b6843_row2_col3{\n",
+       "        }#T_68766_row2_col3{\n",
        "            background-color:  #65aad4;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row2_col4{\n",
+       "        }#T_68766_row2_col4{\n",
        "            background-color:  #2b7bba;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row2_col5{\n",
+       "        }#T_68766_row2_col5{\n",
        "            background-color:  #cde0f1;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row3_col1{\n",
+       "        }#T_68766_row3_col1{\n",
        "            background-color:  #6caed6;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row3_col2{\n",
+       "        }#T_68766_row3_col2{\n",
        "            background-color:  #87bddc;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row3_col4{\n",
+       "        }#T_68766_row3_col4{\n",
        "            background-color:  #c2d9ee;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row3_col5{\n",
+       "        }#T_68766_row3_col5{\n",
        "            background-color:  #dbe9f6;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row4_col0{\n",
+       "        }#T_68766_row4_col0{\n",
        "            background-color:  #d4e4f4;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row4_col1{\n",
+       "        }#T_68766_row4_col1{\n",
        "            background-color:  #3686c0;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row4_col2{\n",
+       "        }#T_68766_row4_col2{\n",
        "            background-color:  #2979b9;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row4_col3{\n",
+       "        }#T_68766_row4_col3{\n",
        "            background-color:  #97c6df;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row4_col5{\n",
+       "        }#T_68766_row4_col5{\n",
        "            background-color:  #d2e3f3;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row5_col0{\n",
+       "        }#T_68766_row5_col0{\n",
        "            background-color:  #d9e7f5;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row5_col1{\n",
+       "        }#T_68766_row5_col1{\n",
        "            background-color:  #b4d3e9;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row5_col2{\n",
+       "        }#T_68766_row5_col2{\n",
        "            background-color:  #cddff1;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row5_col3{\n",
+       "        }#T_68766_row5_col3{\n",
        "            background-color:  #bed8ec;\n",
        "            color:  #000000;\n",
-       "        }#T_b6843_row5_col4{\n",
+       "        }#T_68766_row5_col4{\n",
        "            background-color:  #d6e6f4;\n",
        "            color:  #000000;\n",
-       "        }</style><table id=\"T_b6843_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Year_of_Release</th>        <th class=\"col_heading level0 col1\" >NA_sales</th>        <th class=\"col_heading level0 col2\" >EU_sales</th>        <th class=\"col_heading level0 col3\" >JP_sales</th>        <th class=\"col_heading level0 col4\" >Other_sales</th>        <th class=\"col_heading level0 col5\" >Critic_Score</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_68766_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Year_of_Release</th>        <th class=\"col_heading level0 col1\" >NA_sales</th>        <th class=\"col_heading level0 col2\" >EU_sales</th>        <th class=\"col_heading level0 col3\" >JP_sales</th>        <th class=\"col_heading level0 col4\" >Other_sales</th>        <th class=\"col_heading level0 col5\" >Critic_Score</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_b6843_level0_row0\" class=\"row_heading level0 row0\" >Year_of_Release</th>\n",
-       "                        <td id=\"T_b6843_row0_col0\" class=\"data row0 col0\" >1.00</td>\n",
-       "                        <td id=\"T_b6843_row0_col1\" class=\"data row0 col1\" >-0.09</td>\n",
-       "                        <td id=\"T_b6843_row0_col2\" class=\"data row0 col2\" >0.00</td>\n",
-       "                        <td id=\"T_b6843_row0_col3\" class=\"data row0 col3\" >-0.17</td>\n",
-       "                        <td id=\"T_b6843_row0_col4\" class=\"data row0 col4\" >0.04</td>\n",
-       "                        <td id=\"T_b6843_row0_col5\" class=\"data row0 col5\" >0.01</td>\n",
+       "                        <th id=\"T_68766_level0_row0\" class=\"row_heading level0 row0\" >Year_of_Release</th>\n",
+       "                        <td id=\"T_68766_row0_col0\" class=\"data row0 col0\" >1.00</td>\n",
+       "                        <td id=\"T_68766_row0_col1\" class=\"data row0 col1\" >-0.09</td>\n",
+       "                        <td id=\"T_68766_row0_col2\" class=\"data row0 col2\" >0.00</td>\n",
+       "                        <td id=\"T_68766_row0_col3\" class=\"data row0 col3\" >-0.17</td>\n",
+       "                        <td id=\"T_68766_row0_col4\" class=\"data row0 col4\" >0.04</td>\n",
+       "                        <td id=\"T_68766_row0_col5\" class=\"data row0 col5\" >0.01</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b6843_level0_row1\" class=\"row_heading level0 row1\" >NA_sales</th>\n",
-       "                        <td id=\"T_b6843_row1_col0\" class=\"data row1 col0\" >-0.09</td>\n",
-       "                        <td id=\"T_b6843_row1_col1\" class=\"data row1 col1\" >1.00</td>\n",
-       "                        <td id=\"T_b6843_row1_col2\" class=\"data row1 col2\" >0.77</td>\n",
-       "                        <td id=\"T_b6843_row1_col3\" class=\"data row1 col3\" >0.45</td>\n",
-       "                        <td id=\"T_b6843_row1_col4\" class=\"data row1 col4\" >0.64</td>\n",
-       "                        <td id=\"T_b6843_row1_col5\" class=\"data row1 col5\" >0.24</td>\n",
+       "                        <th id=\"T_68766_level0_row1\" class=\"row_heading level0 row1\" >NA_sales</th>\n",
+       "                        <td id=\"T_68766_row1_col0\" class=\"data row1 col0\" >-0.09</td>\n",
+       "                        <td id=\"T_68766_row1_col1\" class=\"data row1 col1\" >1.00</td>\n",
+       "                        <td id=\"T_68766_row1_col2\" class=\"data row1 col2\" >0.77</td>\n",
+       "                        <td id=\"T_68766_row1_col3\" class=\"data row1 col3\" >0.45</td>\n",
+       "                        <td id=\"T_68766_row1_col4\" class=\"data row1 col4\" >0.64</td>\n",
+       "                        <td id=\"T_68766_row1_col5\" class=\"data row1 col5\" >0.24</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b6843_level0_row2\" class=\"row_heading level0 row2\" >EU_sales</th>\n",
-       "                        <td id=\"T_b6843_row2_col0\" class=\"data row2 col0\" >0.00</td>\n",
-       "                        <td id=\"T_b6843_row2_col1\" class=\"data row2 col1\" >0.77</td>\n",
-       "                        <td id=\"T_b6843_row2_col2\" class=\"data row2 col2\" >1.00</td>\n",
-       "                        <td id=\"T_b6843_row2_col3\" class=\"data row2 col3\" >0.44</td>\n",
-       "                        <td id=\"T_b6843_row2_col4\" class=\"data row2 col4\" >0.72</td>\n",
-       "                        <td id=\"T_b6843_row2_col5\" class=\"data row2 col5\" >0.22</td>\n",
+       "                        <th id=\"T_68766_level0_row2\" class=\"row_heading level0 row2\" >EU_sales</th>\n",
+       "                        <td id=\"T_68766_row2_col0\" class=\"data row2 col0\" >0.00</td>\n",
+       "                        <td id=\"T_68766_row2_col1\" class=\"data row2 col1\" >0.77</td>\n",
+       "                        <td id=\"T_68766_row2_col2\" class=\"data row2 col2\" >1.00</td>\n",
+       "                        <td id=\"T_68766_row2_col3\" class=\"data row2 col3\" >0.44</td>\n",
+       "                        <td id=\"T_68766_row2_col4\" class=\"data row2 col4\" >0.72</td>\n",
+       "                        <td id=\"T_68766_row2_col5\" class=\"data row2 col5\" >0.22</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b6843_level0_row3\" class=\"row_heading level0 row3\" >JP_sales</th>\n",
-       "                        <td id=\"T_b6843_row3_col0\" class=\"data row3 col0\" >-0.17</td>\n",
-       "                        <td id=\"T_b6843_row3_col1\" class=\"data row3 col1\" >0.45</td>\n",
-       "                        <td id=\"T_b6843_row3_col2\" class=\"data row3 col2\" >0.44</td>\n",
-       "                        <td id=\"T_b6843_row3_col3\" class=\"data row3 col3\" >1.00</td>\n",
-       "                        <td id=\"T_b6843_row3_col4\" class=\"data row3 col4\" >0.29</td>\n",
-       "                        <td id=\"T_b6843_row3_col5\" class=\"data row3 col5\" >0.15</td>\n",
+       "                        <th id=\"T_68766_level0_row3\" class=\"row_heading level0 row3\" >JP_sales</th>\n",
+       "                        <td id=\"T_68766_row3_col0\" class=\"data row3 col0\" >-0.17</td>\n",
+       "                        <td id=\"T_68766_row3_col1\" class=\"data row3 col1\" >0.45</td>\n",
+       "                        <td id=\"T_68766_row3_col2\" class=\"data row3 col2\" >0.44</td>\n",
+       "                        <td id=\"T_68766_row3_col3\" class=\"data row3 col3\" >1.00</td>\n",
+       "                        <td id=\"T_68766_row3_col4\" class=\"data row3 col4\" >0.29</td>\n",
+       "                        <td id=\"T_68766_row3_col5\" class=\"data row3 col5\" >0.15</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b6843_level0_row4\" class=\"row_heading level0 row4\" >Other_sales</th>\n",
-       "                        <td id=\"T_b6843_row4_col0\" class=\"data row4 col0\" >0.04</td>\n",
-       "                        <td id=\"T_b6843_row4_col1\" class=\"data row4 col1\" >0.64</td>\n",
-       "                        <td id=\"T_b6843_row4_col2\" class=\"data row4 col2\" >0.72</td>\n",
-       "                        <td id=\"T_b6843_row4_col3\" class=\"data row4 col3\" >0.29</td>\n",
-       "                        <td id=\"T_b6843_row4_col4\" class=\"data row4 col4\" >1.00</td>\n",
-       "                        <td id=\"T_b6843_row4_col5\" class=\"data row4 col5\" >0.20</td>\n",
+       "                        <th id=\"T_68766_level0_row4\" class=\"row_heading level0 row4\" >Other_sales</th>\n",
+       "                        <td id=\"T_68766_row4_col0\" class=\"data row4 col0\" >0.04</td>\n",
+       "                        <td id=\"T_68766_row4_col1\" class=\"data row4 col1\" >0.64</td>\n",
+       "                        <td id=\"T_68766_row4_col2\" class=\"data row4 col2\" >0.72</td>\n",
+       "                        <td id=\"T_68766_row4_col3\" class=\"data row4 col3\" >0.29</td>\n",
+       "                        <td id=\"T_68766_row4_col4\" class=\"data row4 col4\" >1.00</td>\n",
+       "                        <td id=\"T_68766_row4_col5\" class=\"data row4 col5\" >0.20</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b6843_level0_row5\" class=\"row_heading level0 row5\" >Critic_Score</th>\n",
-       "                        <td id=\"T_b6843_row5_col0\" class=\"data row5 col0\" >0.01</td>\n",
-       "                        <td id=\"T_b6843_row5_col1\" class=\"data row5 col1\" >0.24</td>\n",
-       "                        <td id=\"T_b6843_row5_col2\" class=\"data row5 col2\" >0.22</td>\n",
-       "                        <td id=\"T_b6843_row5_col3\" class=\"data row5 col3\" >0.15</td>\n",
-       "                        <td id=\"T_b6843_row5_col4\" class=\"data row5 col4\" >0.20</td>\n",
-       "                        <td id=\"T_b6843_row5_col5\" class=\"data row5 col5\" >1.00</td>\n",
+       "                        <th id=\"T_68766_level0_row5\" class=\"row_heading level0 row5\" >Critic_Score</th>\n",
+       "                        <td id=\"T_68766_row5_col0\" class=\"data row5 col0\" >0.01</td>\n",
+       "                        <td id=\"T_68766_row5_col1\" class=\"data row5 col1\" >0.24</td>\n",
+       "                        <td id=\"T_68766_row5_col2\" class=\"data row5 col2\" >0.22</td>\n",
+       "                        <td id=\"T_68766_row5_col3\" class=\"data row5 col3\" >0.15</td>\n",
+       "                        <td id=\"T_68766_row5_col4\" class=\"data row5 col4\" >0.20</td>\n",
+       "                        <td id=\"T_68766_row5_col5\" class=\"data row5 col5\" >1.00</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x231720c7790>"
+       "<pandas.io.formats.style.Styler at 0x13f26bbdb80>"
       ]
      },
      "execution_count": 11,
@@ -4885,7 +4894,7 @@
     "height": "538px",
     "left": "21px",
     "top": "111.125px",
-    "width": "333.09px"
+    "width": "356.84px"
    },
    "toc_section_display": true,
    "toc_window_display": true
