--- a/composite_project-1/Composite_Project-1_fin.ipynb
+++ b/composite_project-1/Composite_Project-1_fin.ipynb
@@ -525,7 +525,7 @@
    "id": "ea99fcaa",
    "metadata": {},
    "source": [
-    "Безопасная загрузка данных из одного из возможных источников с обработкой exceptions. <br>Сепаратор определяется автоматически. <br>Для оптимизации использования оперативной памяти производится автоматическое преобразование типов `float64` в `float16` и `int64` в `int32`."
+    "Безопасная загрузка данных из одного из возможных источников с обработкой exceptions. <br>Сепаратор определяется автоматически. <br>Для оптимизации использования оперативной памяти производится автоматическое преобразование типов."
    ]
   },
   {
@@ -538,12 +538,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File exists locally\n",
-      "Filename: 'C:\\Users\\dmitr\\OneDrive\\Документы\\DS Yandex\\СПРИНТ 8 из 23 Сборный Ппроект 1\\games.csv'\n",
+      "File exists on Yandex server\n",
+      "Filename: 'Yandex server'\n",
       "Most likely delimiter in the file: ','\n",
       "The first line of the file:\n",
       "Name,Platform,Year_of_Release,Genre,NA_sales,EU_sales,JP_sales,Other_sales,Critic_Score,User_Score,Rating\n",
-      "CSV Data loaded into pandas DataFrame from 'local'\n",
+      "CSV Data loaded into pandas DataFrame from 'ya'\n",
       "Memory usage of the original DataFrame: 5702.89 KB\n",
       "Memory usage of the optimized DataFrame: 5115.25 KB\n"
      ]
@@ -552,7 +552,7 @@
    "source": [
     "filename_dict = {'local': 'games.csv', \\\n",
     "                 'practicum': '/datasets/games.csv', \\\n",
-    "                 'ya': 'https://code.s3.yandex.net/datasets/games.csv'}\n",
+    "                 'ya': 'Yandex server'}\n",
     "games = my_read_csv(filename_dict)"
    ]
   },
@@ -1089,143 +1089,143 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "#T_e13a0_row0_col0,#T_e13a0_row1_col1,#T_e13a0_row2_col2,#T_e13a0_row3_col3,#T_e13a0_row4_col4,#T_e13a0_row5_col5{\n",
+       "#T_4decb_row0_col0,#T_4decb_row1_col1,#T_4decb_row2_col2,#T_4decb_row3_col3,#T_4decb_row4_col4,#T_4decb_row5_col5{\n",
        "            background-color:  #08306b;\n",
        "            color:  #f1f1f1;\n",
-       "        }#T_e13a0_row0_col1,#T_e13a0_row0_col2,#T_e13a0_row0_col3,#T_e13a0_row0_col4,#T_e13a0_row0_col5,#T_e13a0_row3_col0{\n",
+       "        }#T_4decb_row0_col1,#T_4decb_row0_col2,#T_4decb_row0_col3,#T_4decb_row0_col4,#T_4decb_row0_col5,#T_4decb_row3_col0{\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row1_col0{\n",
+       "        }#T_4decb_row1_col0{\n",
        "            background-color:  #eaf3fb;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row1_col2{\n",
+       "        }#T_4decb_row1_col2{\n",
        "            background-color:  #1e6db2;\n",
        "            color:  #f1f1f1;\n",
-       "        }#T_e13a0_row1_col3{\n",
+       "        }#T_4decb_row1_col3{\n",
        "            background-color:  #61a7d2;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row1_col4{\n",
+       "        }#T_4decb_row1_col4{\n",
        "            background-color:  #4292c6;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row1_col5{\n",
+       "        }#T_4decb_row1_col5{\n",
        "            background-color:  #caddf0;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row2_col0{\n",
+       "        }#T_4decb_row2_col0{\n",
        "            background-color:  #dae8f6;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row2_col1{\n",
+       "        }#T_4decb_row2_col1{\n",
        "            background-color:  #1967ad;\n",
        "            color:  #f1f1f1;\n",
-       "        }#T_e13a0_row2_col3{\n",
+       "        }#T_4decb_row2_col3{\n",
        "            background-color:  #65aad4;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row2_col4{\n",
+       "        }#T_4decb_row2_col4{\n",
        "            background-color:  #2b7bba;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row2_col5{\n",
+       "        }#T_4decb_row2_col5{\n",
        "            background-color:  #cde0f1;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row3_col1{\n",
+       "        }#T_4decb_row3_col1{\n",
        "            background-color:  #6caed6;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row3_col2{\n",
+       "        }#T_4decb_row3_col2{\n",
        "            background-color:  #87bddc;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row3_col4{\n",
+       "        }#T_4decb_row3_col4{\n",
        "            background-color:  #c2d9ee;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row3_col5{\n",
+       "        }#T_4decb_row3_col5{\n",
        "            background-color:  #dbe9f6;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row4_col0{\n",
+       "        }#T_4decb_row4_col0{\n",
        "            background-color:  #d4e4f4;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row4_col1{\n",
+       "        }#T_4decb_row4_col1{\n",
        "            background-color:  #3686c0;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row4_col2{\n",
+       "        }#T_4decb_row4_col2{\n",
        "            background-color:  #2979b9;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row4_col3{\n",
+       "        }#T_4decb_row4_col3{\n",
        "            background-color:  #97c6df;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row4_col5{\n",
+       "        }#T_4decb_row4_col5{\n",
        "            background-color:  #d2e3f3;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row5_col0{\n",
+       "        }#T_4decb_row5_col0{\n",
        "            background-color:  #d9e7f5;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row5_col1{\n",
+       "        }#T_4decb_row5_col1{\n",
        "            background-color:  #b4d3e9;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row5_col2{\n",
+       "        }#T_4decb_row5_col2{\n",
        "            background-color:  #cddff1;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row5_col3{\n",
+       "        }#T_4decb_row5_col3{\n",
        "            background-color:  #bed8ec;\n",
        "            color:  #000000;\n",
-       "        }#T_e13a0_row5_col4{\n",
+       "        }#T_4decb_row5_col4{\n",
        "            background-color:  #d6e6f4;\n",
        "            color:  #000000;\n",
-       "        }</style><table id=\"T_e13a0_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Year_of_Release</th>        <th class=\"col_heading level0 col1\" >NA_sales</th>        <th class=\"col_heading level0 col2\" >EU_sales</th>        <th class=\"col_heading level0 col3\" >JP_sales</th>        <th class=\"col_heading level0 col4\" >Other_sales</th>        <th class=\"col_heading level0 col5\" >Critic_Score</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_4decb_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Year_of_Release</th>        <th class=\"col_heading level0 col1\" >NA_sales</th>        <th class=\"col_heading level0 col2\" >EU_sales</th>        <th class=\"col_heading level0 col3\" >JP_sales</th>        <th class=\"col_heading level0 col4\" >Other_sales</th>        <th class=\"col_heading level0 col5\" >Critic_Score</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_e13a0_level0_row0\" class=\"row_heading level0 row0\" >Year_of_Release</th>\n",
-       "                        <td id=\"T_e13a0_row0_col0\" class=\"data row0 col0\" >1.00</td>\n",
-       "                        <td id=\"T_e13a0_row0_col1\" class=\"data row0 col1\" >-0.09</td>\n",
-       "                        <td id=\"T_e13a0_row0_col2\" class=\"data row0 col2\" >0.00</td>\n",
-       "                        <td id=\"T_e13a0_row0_col3\" class=\"data row0 col3\" >-0.17</td>\n",
-       "                        <td id=\"T_e13a0_row0_col4\" class=\"data row0 col4\" >0.04</td>\n",
-       "                        <td id=\"T_e13a0_row0_col5\" class=\"data row0 col5\" >0.01</td>\n",
+       "                        <th id=\"T_4decb_level0_row0\" class=\"row_heading level0 row0\" >Year_of_Release</th>\n",
+       "                        <td id=\"T_4decb_row0_col0\" class=\"data row0 col0\" >1.00</td>\n",
+       "                        <td id=\"T_4decb_row0_col1\" class=\"data row0 col1\" >-0.09</td>\n",
+       "                        <td id=\"T_4decb_row0_col2\" class=\"data row0 col2\" >0.00</td>\n",
+       "                        <td id=\"T_4decb_row0_col3\" class=\"data row0 col3\" >-0.17</td>\n",
+       "                        <td id=\"T_4decb_row0_col4\" class=\"data row0 col4\" >0.04</td>\n",
+       "                        <td id=\"T_4decb_row0_col5\" class=\"data row0 col5\" >0.01</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e13a0_level0_row1\" class=\"row_heading level0 row1\" >NA_sales</th>\n",
-       "                        <td id=\"T_e13a0_row1_col0\" class=\"data row1 col0\" >-0.09</td>\n",
-       "                        <td id=\"T_e13a0_row1_col1\" class=\"data row1 col1\" >1.00</td>\n",
-       "                        <td id=\"T_e13a0_row1_col2\" class=\"data row1 col2\" >0.77</td>\n",
-       "                        <td id=\"T_e13a0_row1_col3\" class=\"data row1 col3\" >0.45</td>\n",
-       "                        <td id=\"T_e13a0_row1_col4\" class=\"data row1 col4\" >0.64</td>\n",
-       "                        <td id=\"T_e13a0_row1_col5\" class=\"data row1 col5\" >0.24</td>\n",
+       "                        <th id=\"T_4decb_level0_row1\" class=\"row_heading level0 row1\" >NA_sales</th>\n",
+       "                        <td id=\"T_4decb_row1_col0\" class=\"data row1 col0\" >-0.09</td>\n",
+       "                        <td id=\"T_4decb_row1_col1\" class=\"data row1 col1\" >1.00</td>\n",
+       "                        <td id=\"T_4decb_row1_col2\" class=\"data row1 col2\" >0.77</td>\n",
+       "                        <td id=\"T_4decb_row1_col3\" class=\"data row1 col3\" >0.45</td>\n",
+       "                        <td id=\"T_4decb_row1_col4\" class=\"data row1 col4\" >0.64</td>\n",
+       "                        <td id=\"T_4decb_row1_col5\" class=\"data row1 col5\" >0.24</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e13a0_level0_row2\" class=\"row_heading level0 row2\" >EU_sales</th>\n",
-       "                        <td id=\"T_e13a0_row2_col0\" class=\"data row2 col0\" >0.00</td>\n",
-       "                        <td id=\"T_e13a0_row2_col1\" class=\"data row2 col1\" >0.77</td>\n",
-       "                        <td id=\"T_e13a0_row2_col2\" class=\"data row2 col2\" >1.00</td>\n",
-       "                        <td id=\"T_e13a0_row2_col3\" class=\"data row2 col3\" >0.44</td>\n",
-       "                        <td id=\"T_e13a0_row2_col4\" class=\"data row2 col4\" >0.72</td>\n",
-       "                        <td id=\"T_e13a0_row2_col5\" class=\"data row2 col5\" >0.22</td>\n",
+       "                        <th id=\"T_4decb_level0_row2\" class=\"row_heading level0 row2\" >EU_sales</th>\n",
+       "                        <td id=\"T_4decb_row2_col0\" class=\"data row2 col0\" >0.00</td>\n",
+       "                        <td id=\"T_4decb_row2_col1\" class=\"data row2 col1\" >0.77</td>\n",
+       "                        <td id=\"T_4decb_row2_col2\" class=\"data row2 col2\" >1.00</td>\n",
+       "                        <td id=\"T_4decb_row2_col3\" class=\"data row2 col3\" >0.44</td>\n",
+       "                        <td id=\"T_4decb_row2_col4\" class=\"data row2 col4\" >0.72</td>\n",
+       "                        <td id=\"T_4decb_row2_col5\" class=\"data row2 col5\" >0.22</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e13a0_level0_row3\" class=\"row_heading level0 row3\" >JP_sales</th>\n",
-       "                        <td id=\"T_e13a0_row3_col0\" class=\"data row3 col0\" >-0.17</td>\n",
-       "                        <td id=\"T_e13a0_row3_col1\" class=\"data row3 col1\" >0.45</td>\n",
-       "                        <td id=\"T_e13a0_row3_col2\" class=\"data row3 col2\" >0.44</td>\n",
-       "                        <td id=\"T_e13a0_row3_col3\" class=\"data row3 col3\" >1.00</td>\n",
-       "                        <td id=\"T_e13a0_row3_col4\" class=\"data row3 col4\" >0.29</td>\n",
-       "                        <td id=\"T_e13a0_row3_col5\" class=\"data row3 col5\" >0.15</td>\n",
+       "                        <th id=\"T_4decb_level0_row3\" class=\"row_heading level0 row3\" >JP_sales</th>\n",
+       "                        <td id=\"T_4decb_row3_col0\" class=\"data row3 col0\" >-0.17</td>\n",
+       "                        <td id=\"T_4decb_row3_col1\" class=\"data row3 col1\" >0.45</td>\n",
+       "                        <td id=\"T_4decb_row3_col2\" class=\"data row3 col2\" >0.44</td>\n",
+       "                        <td id=\"T_4decb_row3_col3\" class=\"data row3 col3\" >1.00</td>\n",
+       "                        <td id=\"T_4decb_row3_col4\" class=\"data row3 col4\" >0.29</td>\n",
+       "                        <td id=\"T_4decb_row3_col5\" class=\"data row3 col5\" >0.15</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e13a0_level0_row4\" class=\"row_heading level0 row4\" >Other_sales</th>\n",
-       "                        <td id=\"T_e13a0_row4_col0\" class=\"data row4 col0\" >0.04</td>\n",
-       "                        <td id=\"T_e13a0_row4_col1\" class=\"data row4 col1\" >0.64</td>\n",
-       "                        <td id=\"T_e13a0_row4_col2\" class=\"data row4 col2\" >0.72</td>\n",
-       "                        <td id=\"T_e13a0_row4_col3\" class=\"data row4 col3\" >0.29</td>\n",
-       "                        <td id=\"T_e13a0_row4_col4\" class=\"data row4 col4\" >1.00</td>\n",
-       "                        <td id=\"T_e13a0_row4_col5\" class=\"data row4 col5\" >0.20</td>\n",
+       "                        <th id=\"T_4decb_level0_row4\" class=\"row_heading level0 row4\" >Other_sales</th>\n",
+       "                        <td id=\"T_4decb_row4_col0\" class=\"data row4 col0\" >0.04</td>\n",
+       "                        <td id=\"T_4decb_row4_col1\" class=\"data row4 col1\" >0.64</td>\n",
+       "                        <td id=\"T_4decb_row4_col2\" class=\"data row4 col2\" >0.72</td>\n",
+       "                        <td id=\"T_4decb_row4_col3\" class=\"data row4 col3\" >0.29</td>\n",
+       "                        <td id=\"T_4decb_row4_col4\" class=\"data row4 col4\" >1.00</td>\n",
+       "                        <td id=\"T_4decb_row4_col5\" class=\"data row4 col5\" >0.20</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e13a0_level0_row5\" class=\"row_heading level0 row5\" >Critic_Score</th>\n",
-       "                        <td id=\"T_e13a0_row5_col0\" class=\"data row5 col0\" >0.01</td>\n",
-       "                        <td id=\"T_e13a0_row5_col1\" class=\"data row5 col1\" >0.24</td>\n",
-       "                        <td id=\"T_e13a0_row5_col2\" class=\"data row5 col2\" >0.22</td>\n",
-       "                        <td id=\"T_e13a0_row5_col3\" class=\"data row5 col3\" >0.15</td>\n",
-       "                        <td id=\"T_e13a0_row5_col4\" class=\"data row5 col4\" >0.20</td>\n",
-       "                        <td id=\"T_e13a0_row5_col5\" class=\"data row5 col5\" >1.00</td>\n",
+       "                        <th id=\"T_4decb_level0_row5\" class=\"row_heading level0 row5\" >Critic_Score</th>\n",
+       "                        <td id=\"T_4decb_row5_col0\" class=\"data row5 col0\" >0.01</td>\n",
+       "                        <td id=\"T_4decb_row5_col1\" class=\"data row5 col1\" >0.24</td>\n",
+       "                        <td id=\"T_4decb_row5_col2\" class=\"data row5 col2\" >0.22</td>\n",
+       "                        <td id=\"T_4decb_row5_col3\" class=\"data row5 col3\" >0.15</td>\n",
+       "                        <td id=\"T_4decb_row5_col4\" class=\"data row5 col4\" >0.20</td>\n",
+       "                        <td id=\"T_4decb_row5_col5\" class=\"data row5 col5\" >1.00</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x17b55dee730>"
+       "<pandas.io.formats.style.Styler at 0x20c01d00eb0>"
       ]
      },
      "execution_count": 18,
